# Cloud_computing

./: README.md  pyproject.toml
.github/workflows/: build_and_publish.yml  main.yml
cloud_project/cloud_project/: settings.py
cloud_project/counter/: views.py
cloud_project/counter/migrations/: 0001_initial.py
project/: Dockerfile  docker-compose.yml  pyproject.toml  requirenments.txt
project/cloud_project/: db.sqlite3
project/cloud_project/cloud_project/: settings.py  urls.py
project/cloud_project/counter/: models.py  views.py
project/cloud_project/student/: models.py  serializers.py  views.py
project/cloud_project/student/migrations/: 0001_initial.py
vagrant/: Vagrantfile  script.sh  vars.env
vagrant/.vagrant/machines/default/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key  synced_folders  vagrant_cwd
