[tool.poetry]
name = "cloudcomputing"
version = "0.1.0"
description = "Cloud project"
authors = ["Dimitrije Stojanov <mitadima@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^2.2"
djangorestframework = "^3.12.4"
markdown = "^3.*"
django-filter = "^21.*"
mysql-connector-python = "8.0.27"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
